--- a/roles/docker/templates/network.j2
+++ b/roles/docker/templates/network.j2
@@ -1,4 +1,4 @@
 # Created by anaconda
 NOZEROCONF=yes
 NETWORKING_IPV6=no
-HOSTNAME={{hostname}}
+HOSTNAME={{ansible_default_ipv4.address|regex_replace('\\.','-')}}
